css/styles.css
/* ... */
.F-map {
  display            : flex;
  align-items        : flex-end;
  justify-content    : flex-start;
  min-width          : 270px;
  height             : 120px;
  aspect-ratio       : 2/1;
  background-image   : url(../img/footer-map.svg);
  background-size    : cover;
  background-size    : 110%;
  background-position: center;
  background-repeat  : no-repeat;
  border-radius      : 0px;
  padding            : 0px;
  margin             : 0px;
  border-radius      : 8px;
  overflow           : hidden;
  border             : solid 1px #554c7d;
}

.F-center {
  display        : flex;
  flex-direction : row;
  align-items    : center;
  justify-content: center;
  grid-gap       : 28px;
  width          : 100%;
  height         : fit-content;
}

.F-map-title {
  display         : flex;
  align-items     : center;
  justify-content : flex-start;
  white-space     : nowrap;
  width           : 100%;
  height          : fit-content;
  padding         : 10px;
  background-color: #161124;
  border-top      : solid 1px #554c7d;
}

.F-map-title p {
  font-size  : clamp(0.8rem, 1.7vw, 0.8rem) !important;
  line-height: 100%;
}

.F-LI-01 {
  display        : flex;
  flex-direction : column;
  align-items    : flex-start;
  justify-content: flex-start;
  grid-gap       : 16px;
  height         : fit-content;
  width          : fit-content;
  padding        : 0px 0px;
}

.F-LI-01 p {
  display    : inline-flex;
  white-space: nowrap;
  line-height: 27.2px;
  cursor     : pointer;
  width      : fit-content;
}

.F-LI-02 {
  display        : flex;
  flex-direction : column;
  align-items    : flex-start;
  justify-content: flex-start;
  grid-gap       : 16px;
  height         : fit-content;
  width          : 100%;
  padding        : 0px 0px;
}

.F-LI-03 {
  display        : flex;
  flex-direction : row;
  align-items    : flex-start;
  justify-content: flex-end;
  width          : fit-content;
  height         : fit-content;
  padding        : 0px 0px;
  padding-right  : 0px;
  grid-gap       : 28px;
}

.F-set {
  display       : flex;
  flex-direction: column;
  height        : 100%;
  width         : fit-content;
}

.set-header p {
  font-size  : 0.9rem;
  font-weight: 700;
  white-space: nowrap;
  line-height: 27.2px;
}

.F-set ul {
  display        : flex;
  grid-gap       : 2px;
  flex-direction : column;
  justify-content: center;
  list-style-type: none;
  height         : 100%;
  padding        : 0px;
  padding-top    : 0px;
  margin         : 0px;
}

.F-set ul li {
  display        : inline-flex;
  align-items    : center;
  justify-content: flex-start;
}

.F-set p {
  display    : inline;
  white-space: nowrap;
  cursor     : pointer;
}

.F-set ul li p {
  font-size: 0.7rem;
}

.F-number,
.F-mail {
  cursor         : pointer;
  display        : flex;
  align-items    : center;
  justify-content: space-between;
  width          : 100%;
  grid-gap       : 8px;
  border         : solid 1px #554c7d7a;
  border-radius  : 5px;
}

.F-number-L,
.F-mail-L {
  display        : flex;
  align-items    : center;
  justify-content: flex-start;
  width          : 100%;
  grid-gap       : 8px;
}

.F-number-L .material-symbols-outlined {
  border-top-right-radius   : 0px;
  border-bottom-right-radius: 0px;
}

.F-mail-L .material-symbols-outlined {
  border-top-right-radius   : 0px;
  border-bottom-right-radius: 0px;
}

#f-copy.material-symbols-outlined {
  background-color: #f7f6ff00;
}

.F-links {
  display        : none;
  align-items    : flex-start;
  justify-content: space-between;
  height         : fit-content;
  width          : fit-content;
  border         : solid 0px #554c7d00;
  grid-gap       : 28px;
}

.social-ico {
  display        : flex;
  align-items    : center;
  justify-content: flex-start;
  width          : 100%;
  grid-gap       : 16px;
}

.chip-ico {
  display: flex;
  width  : 27.2px;
  height : 27.2px;
}

.fb {
  background-image   : url(../img/facebook-logo.svg);
  background-size    : contain;
  background-position: center;
  background-repeat  : no-repeat;
  background-size    : 8px;
}

.lkd-in {
  background-image   : url(../img/linked-in-logo.svg);
  background-size    : contain;
  background-position: center;
  background-repeat  : no-repeat;
  background-size    : 14px;
}

/* action styles */
.hidden {
  display: none;
}

.F-chip {
  display   : flex;
  transition: all 0.05s ease-in-out;
  transform : scale(1);
}

.F-chip:hover {
  cursor          : pointer;
  background-color: #c8c8e718;
}

.F-chip:active {
  cursor          : pointer;
  background-color: #85dcdc11;
  transform       : scale(0.99);
}

.touched-pressed {
  display   : flex;
  transition: all 0.05s ease-in-out;
  transform : scale(1);
}

.touched-pressed:hover {
  cursor: pointer;
  border: solid 0.1px #c8c8e723;
}

.touched-pressed:active {
  transform: scale(0.95);
  border   : solid 0.01px #c8c8e725;
}

/* page-content */
.home-page {
  display        : flex;
  flex-direction : column;
  align-items    : center;
  justify-content: flex-start;
  width          : 100%;
  height         : auto;
}

.Veras-surface {
  display         : flex;
  flex-direction  : column;
  align-items     : center;
  justify-content : flex-start;
  width           : 100%;
  height          : auto;
  margin          : 0px;
  grid-gap        : 0px;
  background-color: #e2ddff;
  border-radius   : 0px;
  padding         : 0px;
  overflow-y: scroll !important;
  overflow  : overlay !important;
  overflow-x: hidden !important;
}

.mobile-nav {
  display: flex;
}


.surface-view {
  display         : flex;
  flex-direction  : row;
  align-items     : center;
  justify-content : flex-start;
  width           : 100%;
  height          : auto;
  transition      : opacity 0.5s cubic-bezier(0, 1.02, 0, 1.02);
  background-color: var(--v-lavender-plane);

}

/* v-Home */
.v-home {
  display: flex;
  padding: 0px !important;
  height : fit-content !important;
}

#v-home {
  display: flex;
}
/* ... */

